--- a/wiki/Description.wiki
+++ b/wiki/Description.wiki
@@ -204,7 +204,7 @@ For decades, cultivar testing in trial sites has proven to be an efficient and v
  * Hitz, S. and Smith, J., 2004. Estimating global impacts from climate change. Global Environmental Change Part A, 14(3): 201-218.
  * IPCC, 2000. Special Report on Emission Scenarios. IPCC, Geneva, Switzerland.
  * IPCC, 2007. IPCC Fourth Assessment Report: Climate Change 2007 (AR4). IPCC, Geneva, Switzerland.
- * Jarvis, A. et al., 2011. An Integrated Adaptation and Mitigation Framework for Developing Agricultural Research: Synergies and Trade-offs. Experimental Agriculture, 47(Special Issue 02): 185-203.
+ * Jarvis, A. et al., 2011. An Integrated Adaptation and Mitigation Framework for Developing Agricultural Research: Synergies and Trade-offs. Experimental Agriculture, 47: 185-203.
  * Jarvis, A., Ramirez, J., Anderson, B., Leibing, C. and Aggarwal, P., 2010. Scenarios of Climate Change Within the Context of Agriculture. Climate Change and Crop Production. CAB International.
  * Lobell, D.B. and Burke, M.B., 2008. Why are agricultural impacts of climate change so uncertain? The importance of temperature relative to precipitation. Environmental Research Letters, 3(3): 034007.
  * Lobell, D.B. et al., 2008. Prioritizing Climate Change Adaptation Needs for Food Security in 2030. Science, 319(5863): 607-610.
