--- a/wiki/EffectsGS.wiki
+++ b/wiki/EffectsGS.wiki
@@ -31,8 +31,8 @@ params <- createParameters(x=87.224,
                            hal.mrd=NA,
                            z=2,
                            scenario=c("current","a1b_2020_2049_bccr_bcm2_0"),
-                           vars=c("tmean"),
-                           weights=c("dtr"),
+                           vars=c("tmean","prec"),
+                           weights=c("dtr",1),
                            ndivisions=12,
                            env.data="C:/analogues/climate-data/current_a1b_2030",
                            ext=".asc",
