--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,18 +1,18 @@
 #summary Table of contents.
 
- * General Information
+ * *General Information*
    * [Description]   
- * 1. Getting started with R
+ * *1. Getting started with R*
    * [WhyR 1.1. Why R?]
    * [DownloadR 1.2. Downloading R and R Studio]
    * [InstallLibraries 1.3. Installing libraries]
    * [BasicCalcs 1.4. Perform basic calculations]
    * [GeoDataR 1.5. Use of geographic data in R: raster package]
- * 2. Downloading and formatting weather data
+ * *2. Downloading and formatting weather data*
    * [DataSources 2.1. Sources of climate data]
    * [DownUseData 2.2. Downloading and using these data]
    * [InterpolateData 2.3. Interpolation of daily weather data: weatherData package]   
- * 3. The `analogues` R-package
+ * *3. The `analogues` R-package*
    * [AnaloguesInstall 3.1. Installing the analogues package]
    * [ParamsObject 3.2. The `params` object and the loading of data]   
    * [DissimFunction 3.3. Function `dissimilarity()` and first example analysis]   
@@ -25,6 +25,6 @@
    * [ThresholdCCAFS 3.10. Selecting candidate analogues via thresholding]
    * [UncertaintyQuant 3.11. Uncertainty quantification]
    * [AgroAnalogues 3.12. Agriculturally meaningful analyses]
- * [IssueReport Reporting bugs, issues or new features]
+ * [IssueReport *Reporting bugs, issues or new features*]
    
    
